# immich-sync

./: .pre-commit-config.yaml  .releaserc  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: semantic-release.yml
src/immich_sync/: __init__.py  api.py  cli.py  config.py  downloader.py  utils.py
